@@ -18,6 +18,10 @@ package com.badlogic.gdx.math;
 
 /** @author Nathan Sweet */
 public final class GeometryUtils {
+
+	private GeometryUtils () {
+	}
+
 	static private final Vector2 tmp1 = new Vector2(), tmp2 = new Vector2(), tmp3 = new Vector2();
 
 	/** Computes the barycentric coordinates v,w for the specified point in the triangle.
