@@ -21,6 +21,7 @@
 	- 64-bit: ARMv8/AArch64
 - API Change: Removed arm abi from SharedLibraryLoader
 - API Addition: Added a Lwjgl3ApplicationConfiguration#foregroundFPS option.
+- API Change: Utility classes are now final and have a private constructor to prevent instantiation.
 
 [1.9.11]
 - Update to MobiVM 2.3.8
@@ -64,7 +65,7 @@
 - API Addition: Added AsynchronousAssetLoader#unloadAsync to fix memory leaks when an asset is unloaded during loading.
 - Fixed Label text wrapping when it shouldn't (#6098).
 - Fixed ShapeRenderer not being able to render alpha 0xff (was max 0xfe).
-- API Change: glGetActiveUniform and glGetActiveAttrib paramter changed from Buffer to IntBuffer.
+- API Change: glGetActiveUniform and glGetActiveAttrib parameter changed from Buffer to IntBuffer.
 
 [1.9.10]
 - API Addition: Allow target display for maximization LWJGL3 backend
